feat: Add favorites Create, Modify and Delete API, and update some logic of util package.
